--- a/index.html
+++ b/index.html
@@ -1,3 +1,41 @@
-<p>This is new repo.</p>
-<p>This is new Feature(dropdown)</p>
-<p>This is new Feature(button)</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dropbox</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <h1>Dakbook</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Sign In</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Secure File Storage and Sharing</h2>
+            <p>Access your files anytime, anywhere with Dakbook.</p>
+            <a href="#" class="btn">Get Started</a>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <p>© 2024 Dakbook Clone. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+
+</html>
