adding front demo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
+                <img src="DAKBOOK LOGO.jpeg" alt="LOGO">
                 <h1>Dakbook</h1>
             </div>
             <nav>
